Updated package.json info

--- a/srcs/package.json
+++ b/srcs/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "electron-quick-start",
+  "name": "ft_box",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
+  "description": "All in one application for 42 :)",
+  "main": "electron/main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/jraleman/ft_box",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Ecole 42"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "jraleman",
+  "license": "MIT",
   "devDependencies": {
     "electron": "~1.7.8"
   }
