--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "jraleman",
   "license": "MIT",
   "devDependencies": {
-    "electron": "~1.7.8"
+    "electron": "~1.7.8",
+    "eslint": "^4.15.0",
+    "eslint-config-google": "^0.9.1"
   }
 }
