--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "one-for-all",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jraleman.com/OneForAll.42",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "semistandard": "^12.0.1",
+    "snazzy": "^7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "node ./node_modules/semistandard/bin/cmd.js --verbose | node ./node_modules/snazzy/bin/cmd.js || true",
+    "lint-log": "npm run lint > lint.log ; open lint.log || true",
+    "lint-log-linux": "npm run lint > lint.log ; open lint.log || true",
+    "lint-install": "sudo npm install semistandard --global"
   }
 }
