--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
     "semistandard": "^12.0.1",
     "snazzy": "^7.1.1"
   },
