--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "semistandard": "^12.0.1",
     "snazzy": "^7.1.1"
