--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "lint-log": "npm run lint > lint.log ; open lint.log || true",
     "lint-log-linux": "npm run lint > lint.log ; open lint.log || true",
     "lint-install": "sudo npm install semistandard --global"
+  },
+  "devDependencies": {
+    "electron": "^2.0.5"
   }
 }
