--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0",
-    "semistandard": "^12.0.1",
-    "snazzy": "^7.1.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "node ./node_modules/semistandard/bin/cmd.js --verbose | node ./node_modules/snazzy/bin/cmd.js || true",
+    "electron": "electron .",
+    "lint": "semistandard --verbose | snazzy || true",
     "lint-log": "npm run lint > lint.log ; open lint.log || true",
     "lint-log-linux": "npm run lint > lint.log ; open lint.log || true",
     "lint-install": "sudo npm install semistandard --global"
   },
   "devDependencies": {
-    "electron": "^2.0.5"
+    "electron": "^2.0.5",
+    "semistandard": "^12.0.1",
+    "snazzy": "^7.1.1"
   }
 }
