--- a/package.json
+++ b/package.json
@@ -10,31 +10,43 @@
   ],
   "author": "jraleman",
   "license": "MIT",
-  "dependencies": {
-    "material-ui": "^0.20.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-i18n": "^1.0.1",
-    "react-router": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
-  },
+  "main": "src/electron-starter.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "electron": "electron .",
+    "electron-start": "node src/electron-wait-react",
     "lint": "semistandard --verbose | snazzy || true",
     "lint-log": "npm run lint > lint.log ; open lint.log || true",
     "lint-log-linux": "npm run lint > lint.log ; open lint.log || true",
     "lint-install": "sudo npm install semistandard --global"
   },
+  "dependencies": {
+    "material-ui": "^0.20.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-i18n": "^1.0.1",
+    "react-router": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
+  },
   "devDependencies": {
     "electron": "^2.0.5",
+    "electron-builder": "^20.22.0",
+    "react-scripts": "1.1.4",
     "semistandard": "^12.0.1",
     "snazzy": "^7.1.1"
+  },
+  "build": {
+    "appId": "com.electron.electron-with-create-react-app",
+    "win": {
+      "iconUrl": "https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-256.png"
+    },
+    "directories": {
+      "buildResources": "public"
+    }
   }
 }
