--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "postinstall": "install-app-deps"
   },
   "dependencies": {
+    "@material-ui/core": "^1.4.0",
     "electron": "^2.0.5",
-    "material-ui": "^0.20.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-i18n": "^1.0.1",
-    "react-scripts": "1.1.4",
     "react-router": "^4.3.1",
+    "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
