--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.4.0",
+    "@material-ui/icons": "^1.1.0",
     "electron": "^2.0.5",
+    "material-ui-search-bar": "^1.0.0-beta.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-i18n": "^1.0.1",
