--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-ui-search-bar": "^1.0.0-beta.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-fontawesome": "^1.6.1",
     "react-i18n": "^1.0.1",
     "react-router": "^4.3.1",
     "react-scripts": "1.1.4",
