--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "postinstall": "install-app-deps"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
     "electron": "^2.0.5",
