--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-fontawesome": "^1.6.1",
+    "react-fullpage": "^0.1.18",
     "react-i18n": "^1.0.1",
     "react-router": "^4.3.1",
     "react-scripts": "1.1.4",
